Melhorando exceptions, add log para exceptions e lidar com erro no banco de dados